# WebNowPlaying-Library

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build-msvc.ps1  build.ps1  build.sh  flake.nix  libwnp.pc.in  package.bat  package.sh  wnp.pc.in
bindings/python/: __init__.py  build.bat  setup.py
bindings/python/examples/: simple.py
bindings/python/wnp/: __init__.py  functions.py
cmake/: libwnpConfig.cmake.in  wnpConfig.cmake.in
examples/: all_players.c  callbacks.c  debug.c  simple.c  sleep.h
include/: wnp.h  wnp.i
src/: cws.c  cws.h  darwin.m  darwin.mm  dp_linux.c  dp_windows.cpp  internal.h  linux.c  stb_image.c  web.c  windows.cpp  wnp.c  wnp.h  wnp.i  wnp.py  wnp_wrap.c
tests/cws/: echo.c  run.sh
tests/cws/config/: fuzzingclient.json
tests/libwnp/: 01-adapter-version.c  02-parse-player.c  03-desktop-players.c  04-active-player.c  05-events.c  run.sh  test.h
